<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#99ff66"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <EditText android:layout_width="match_parent"
              android:id="@+id/content_edit"
              android:textSize="14sp"
              android:minLines="16"
              android:maxLines="28"
              android:background="#99ffff"
              android:layout_height="wrap_content"/>
    <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonSave"/>
    <Button
            android:text="@string/button_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonExit2"/>
    <Button
            android:text="@string/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonReset"/>


</LinearLayout>
