<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">


    <TextView
            android:text="@string/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"/>
    <EditText
            android:id="@+id/editText"
            android:text="@string/edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ff0000"
            android:textSize="60sp" />

    <Button
            android:text="@string/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button"/>
    <Button
            android:text="@string/button_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonExit"/>




</LinearLayout>
